deployment-template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-1-svc #tên service
  namespace: lab #tên namespace
spec:
  selector:
    app: deploy-1 #tên deployment
  ports:
    - port: 80 #port bên ngoài service
      targetPort: 8080 #port bên trong container
      protocol: TCP
  type: ClusterIP
